--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "erc20-test",
+  "name": "dgtx-erc20-token",
   "version": "0.1.0",
-  "description": "ERC20 token test-suite",
+  "description": "DGTX ERC20 token",
   "keywords": [
     "erc20"
   ],
@@ -9,27 +9,28 @@
   "private": true,
   "license": "MIT",
   "scripts": {
+    "build": "truffle compile",
     "truffle": "truffle",
     "coverage": "scripts/coverage.sh",
     "test": "scripts/test.sh"
   },
   "dependencies": {
-    "zeppelin-solidity": "~1.7.0"
+    "openzeppelin-solidity": "~3.2.0"
   },
   "devDependencies": {
-    "truffle": "4.0.6",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-register": "6.26.0",
-    "bignumber.js": "2.0.7",
+    "bn-chai": "^1.0.1",
+    "bn.js": "^5.1.3",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "^2.0.2",
     "dirty-chai": "^2.0.1",
-    "ganache-cli": "^6.0.3",
-    "solidity-coverage": "0.3.5"
+    "ganache-cli": "^6.11.0",
+    "solidity-coverage": "^0.7.10",
+    "truffle": "~5.1.46"
   }
 }
